icons reference updated

--- a/src/icons/icons-reference.html
+++ b/src/icons/icons-reference.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Font Reference - Dunno-icon-fonnt</title>
+    <title>Font Reference - Dunno-icon-font</title>
     <link href="http://fonts.googleapis.com/css?family=Dosis:400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="styles.css">
     <style type="text/css">
@@ -41,7 +41,7 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
   </head>
   <body>
     <div class="container">
-      <h1>Dunno-icon-fonnt</h1>
+      <h1>Dunno-icon-font</h1>
       <p class="small">This font was created with<a href="http://fontastic.me/">Fontastic</a></p>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -58,36 +58,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="c">
         </li>
         <li>
-          <div data-icon="d" class="icon"></div>
-          <input type="text" readonly="readonly" value="d">
-        </li>
-        <li>
           <div data-icon="e" class="icon"></div>
           <input type="text" readonly="readonly" value="e">
-        </li>
-        <li>
-          <div data-icon="f" class="icon"></div>
-          <input type="text" readonly="readonly" value="f">
-        </li>
-        <li>
-          <div data-icon="g" class="icon"></div>
-          <input type="text" readonly="readonly" value="g">
-        </li>
-        <li>
-          <div data-icon="h" class="icon"></div>
-          <input type="text" readonly="readonly" value="h">
-        </li>
-        <li>
-          <div data-icon="i" class="icon"></div>
-          <input type="text" readonly="readonly" value="i">
-        </li>
-        <li>
-          <div data-icon="j" class="icon"></div>
-          <input type="text" readonly="readonly" value="j">
-        </li>
-        <li>
-          <div data-icon="k" class="icon"></div>
-          <input type="text" readonly="readonly" value="k">
         </li>
         <li>
           <div data-icon="l" class="icon"></div>
@@ -145,108 +117,344 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <div data-icon="y" class="icon"></div>
           <input type="text" readonly="readonly" value="y">
         </li>
+        <li>
+          <div data-icon="z" class="icon"></div>
+          <input type="text" readonly="readonly" value="z">
+        </li>
+        <li>
+          <div data-icon="A" class="icon"></div>
+          <input type="text" readonly="readonly" value="A">
+        </li>
+        <li>
+          <div data-icon="B" class="icon"></div>
+          <input type="text" readonly="readonly" value="B">
+        </li>
+        <li>
+          <div data-icon="C" class="icon"></div>
+          <input type="text" readonly="readonly" value="C">
+        </li>
+        <li>
+          <div data-icon="D" class="icon"></div>
+          <input type="text" readonly="readonly" value="D">
+        </li>
+        <li>
+          <div data-icon="E" class="icon"></div>
+          <input type="text" readonly="readonly" value="E">
+        </li>
+        <li>
+          <div data-icon="F" class="icon"></div>
+          <input type="text" readonly="readonly" value="F">
+        </li>
+        <li>
+          <div data-icon="G" class="icon"></div>
+          <input type="text" readonly="readonly" value="G">
+        </li>
+        <li>
+          <div data-icon="H" class="icon"></div>
+          <input type="text" readonly="readonly" value="H">
+        </li>
+        <li>
+          <div data-icon="I" class="icon"></div>
+          <input type="text" readonly="readonly" value="I">
+        </li>
+        <li>
+          <div data-icon="J" class="icon"></div>
+          <input type="text" readonly="readonly" value="J">
+        </li>
+        <li>
+          <div data-icon="K" class="icon"></div>
+          <input type="text" readonly="readonly" value="K">
+        </li>
+        <li>
+          <div data-icon="L" class="icon"></div>
+          <input type="text" readonly="readonly" value="L">
+        </li>
+        <li>
+          <div data-icon="M" class="icon"></div>
+          <input type="text" readonly="readonly" value="M">
+        </li>
+        <li>
+          <div data-icon="N" class="icon"></div>
+          <input type="text" readonly="readonly" value="N">
+        </li>
+        <li>
+          <div data-icon="O" class="icon"></div>
+          <input type="text" readonly="readonly" value="O">
+        </li>
+        <li>
+          <div data-icon="P" class="icon"></div>
+          <input type="text" readonly="readonly" value="P">
+        </li>
+        <li>
+          <div data-icon="Q" class="icon"></div>
+          <input type="text" readonly="readonly" value="Q">
+        </li>
+        <li>
+          <div data-icon="R" class="icon"></div>
+          <input type="text" readonly="readonly" value="R">
+        </li>
+        <li>
+          <div data-icon="S" class="icon"></div>
+          <input type="text" readonly="readonly" value="S">
+        </li>
+        <li>
+          <div data-icon="T" class="icon"></div>
+          <input type="text" readonly="readonly" value="T">
+        </li>
+        <li>
+          <div data-icon="U" class="icon"></div>
+          <input type="text" readonly="readonly" value="U">
+        </li>
+        <li>
+          <div data-icon="V" class="icon"></div>
+          <input type="text" readonly="readonly" value="V">
+        </li>
+        <li>
+          <div data-icon="W" class="icon"></div>
+          <input type="text" readonly="readonly" value="W">
+        </li>
+        <li>
+          <div data-icon="X" class="icon"></div>
+          <input type="text" readonly="readonly" value="X">
+        </li>
+        <li>
+          <div data-icon="Y" class="icon"></div>
+          <input type="text" readonly="readonly" value="Y">
+        </li>
+        <li>
+          <div data-icon="Z" class="icon"></div>
+          <input type="text" readonly="readonly" value="Z">
+        </li>
+        <li>
+          <div data-icon="0" class="icon"></div>
+          <input type="text" readonly="readonly" value="0">
+        </li>
+        <li>
+          <div data-icon="i" class="icon"></div>
+          <input type="text" readonly="readonly" value="i">
+        </li>
+        <li>
+          <div data-icon="d" class="icon"></div>
+          <input type="text" readonly="readonly" value="d">
+        </li>
+        <li>
+          <div data-icon="f" class="icon"></div>
+          <input type="text" readonly="readonly" value="f">
+        </li>
+        <li>
+          <div data-icon="g" class="icon"></div>
+          <input type="text" readonly="readonly" value="g">
+        </li>
+        <li>
+          <div data-icon="h" class="icon"></div>
+          <input type="text" readonly="readonly" value="h">
+        </li>
       </ul>
       <h2>CSS mapping</h2>
       <ul class="glyphs css-mapping">
         <li>
-          <div class="icon icon-business-48"></div>
-          <input type="text" readonly="readonly" value="business-48">
+          <div class="icon icon-note"></div>
+          <input type="text" readonly="readonly" value="note">
         </li>
         <li>
-          <div class="icon icon-business-79"></div>
-          <input type="text" readonly="readonly" value="business-79">
+          <div class="icon icon-graph"></div>
+          <input type="text" readonly="readonly" value="graph">
         </li>
         <li>
-          <div class="icon icon-chevron-medium-circle-3-01"></div>
-          <input type="text" readonly="readonly" value="chevron-medium-circle-3-01">
+          <div class="icon icon-arrow-left"></div>
+          <input type="text" readonly="readonly" value="arrow-left">
         </li>
         <li>
-          <div class="icon icon-circle-1"></div>
-          <input type="text" readonly="readonly" value="circle-1">
+          <div class="icon icon-arrow-circle-left"></div>
+          <input type="text" readonly="readonly" value="arrow-circle-left">
         </li>
         <li>
-          <div class="icon icon-circle-2"></div>
-          <input type="text" readonly="readonly" value="circle-2">
+          <div class="icon icon-notification"></div>
+          <input type="text" readonly="readonly" value="notification">
         </li>
         <li>
-          <div class="icon icon-circle-big-1"></div>
-          <input type="text" readonly="readonly" value="circle-big-1">
+          <div class="icon icon-mail"></div>
+          <input type="text" readonly="readonly" value="mail">
         </li>
         <li>
-          <div class="icon icon-circle-big-2"></div>
-          <input type="text" readonly="readonly" value="circle-big-2">
+          <div class="icon icon-search-files"></div>
+          <input type="text" readonly="readonly" value="search-files">
         </li>
         <li>
-          <div class="icon icon-communication-29"></div>
-          <input type="text" readonly="readonly" value="communication-29">
+          <div class="icon icon-play-circle"></div>
+          <input type="text" readonly="readonly" value="play-circle">
         </li>
         <li>
-          <div class="icon icon-communication-53"></div>
-          <input type="text" readonly="readonly" value="communication-53">
+          <div class="icon icon-thermometer"></div>
+          <input type="text" readonly="readonly" value="thermometer">
         </li>
         <li>
-          <div class="icon icon-communication-84"></div>
-          <input type="text" readonly="readonly" value="communication-84">
+          <div class="icon icon-not-ok"></div>
+          <input type="text" readonly="readonly" value="not-ok">
         </li>
         <li>
-          <div class="icon icon-communication-91"></div>
-          <input type="text" readonly="readonly" value="communication-91">
+          <div class="icon icon-play"></div>
+          <input type="text" readonly="readonly" value="play">
         </li>
         <li>
-          <div class="icon icon-communication-94"></div>
-          <input type="text" readonly="readonly" value="communication-94">
+          <div class="icon icon-unlock"></div>
+          <input type="text" readonly="readonly" value="unlock">
         </li>
         <li>
-          <div class="icon icon-content-42"></div>
-          <input type="text" readonly="readonly" value="content-42">
+          <div class="icon icon-lock"></div>
+          <input type="text" readonly="readonly" value="lock">
         </li>
         <li>
-          <div class="icon icon-files-38"></div>
-          <input type="text" readonly="readonly" value="files-38">
+          <div class="icon icon-video"></div>
+          <input type="text" readonly="readonly" value="video">
         </li>
         <li>
-          <div class="icon icon-content-44"></div>
-          <input type="text" readonly="readonly" value="content-44">
+          <div class="icon icon-ok"></div>
+          <input type="text" readonly="readonly" value="ok">
         </li>
         <li>
-          <div class="icon icon-dunno-1"></div>
-          <input type="text" readonly="readonly" value="dunno-1">
+          <div class="icon icon-boy"></div>
+          <input type="text" readonly="readonly" value="boy">
         </li>
         <li>
-          <div class="icon icon-edition-24"></div>
-          <input type="text" readonly="readonly" value="edition-24">
+          <div class="icon icon-close"></div>
+          <input type="text" readonly="readonly" value="close">
         </li>
         <li>
-          <div class="icon icon-edition-25"></div>
-          <input type="text" readonly="readonly" value="edition-25">
+          <div class="icon icon-attach"></div>
+          <input type="text" readonly="readonly" value="attach">
         </li>
         <li>
-          <div class="icon icon-edition-34"></div>
-          <input type="text" readonly="readonly" value="edition-34">
+          <div class="icon icon-edition"></div>
+          <input type="text" readonly="readonly" value="edition">
         </li>
         <li>
-          <div class="icon icon-edition-49"></div>
-          <input type="text" readonly="readonly" value="edition-49">
+          <div class="icon icon-add"></div>
+          <input type="text" readonly="readonly" value="add">
         </li>
         <li>
-          <div class="icon icon-edition-55"></div>
-          <input type="text" readonly="readonly" value="edition-55">
+          <div class="icon icon-user-uncheck"></div>
+          <input type="text" readonly="readonly" value="user-uncheck">
         </li>
         <li>
-          <div class="icon icon-edition-56"></div>
-          <input type="text" readonly="readonly" value="edition-56">
+          <div class="icon icon-user-check"></div>
+          <input type="text" readonly="readonly" value="user-check">
         </li>
         <li>
-          <div class="icon icon-files-8"></div>
-          <input type="text" readonly="readonly" value="files-8">
+          <div class="icon icon-transfer"></div>
+          <input type="text" readonly="readonly" value="transfer">
         </li>
         <li>
-          <div class="icon icon-files-26"></div>
-          <input type="text" readonly="readonly" value="files-26">
+          <div class="icon icon-search"></div>
+          <input type="text" readonly="readonly" value="search">
         </li>
         <li>
-          <div class="icon icon-files-30"></div>
-          <input type="text" readonly="readonly" value="files-30">
+          <div class="icon icon-eye"></div>
+          <input type="text" readonly="readonly" value="eye">
+        </li>
+        <li>
+          <div class="icon icon-quiz"></div>
+          <input type="text" readonly="readonly" value="quiz">
+        </li>
+        <li>
+          <div class="icon icon-users"></div>
+          <input type="text" readonly="readonly" value="users">
+        </li>
+        <li>
+          <div class="icon icon-triangle"></div>
+          <input type="text" readonly="readonly" value="triangle">
+        </li>
+        <li>
+          <div class="icon icon-files-add"></div>
+          <input type="text" readonly="readonly" value="files-add">
+        </li>
+        <li>
+          <div class="icon icon-dunno-logo"></div>
+          <input type="text" readonly="readonly" value="dunno-logo">
+        </li>
+        <li>
+          <div class="icon icon-tasks"></div>
+          <input type="text" readonly="readonly" value="tasks">
+        </li>
+        <li>
+          <div class="icon icon-doc-circle"></div>
+          <input type="text" readonly="readonly" value="doc-circle">
+        </li>
+        <li>
+          <div class="icon icon-clock"></div>
+          <input type="text" readonly="readonly" value="clock">
+        </li>
+        <li>
+          <div class="icon icon-calendar"></div>
+          <input type="text" readonly="readonly" value="calendar">
+        </li>
+        <li>
+          <div class="icon icon-doc-check"></div>
+          <input type="text" readonly="readonly" value="doc-check">
+        </li>
+        <li>
+          <div class="icon icon-cards"></div>
+          <input type="text" readonly="readonly" value="cards">
+        </li>
+        <li>
+          <div class="icon icon-chat-2"></div>
+          <input type="text" readonly="readonly" value="chat-2">
+        </li>
+        <li>
+          <div class="icon icon-doc-lock"></div>
+          <input type="text" readonly="readonly" value="doc-lock">
+        </li>
+        <li>
+          <div class="icon icon-lists"></div>
+          <input type="text" readonly="readonly" value="lists">
+        </li>
+        <li>
+          <div class="icon icon-strip"></div>
+          <input type="text" readonly="readonly" value="strip">
+        </li>
+        <li>
+          <div class="icon icon-docs"></div>
+          <input type="text" readonly="readonly" value="docs">
+        </li>
+        <li>
+          <div class="icon icon-chat"></div>
+          <input type="text" readonly="readonly" value="chat">
+        </li>
+        <li>
+          <div class="icon icon-support"></div>
+          <input type="text" readonly="readonly" value="support">
+        </li>
+        <li>
+          <div class="icon icon-doc"></div>
+          <input type="text" readonly="readonly" value="doc">
+        </li>
+        <li>
+          <div class="icon icon-check"></div>
+          <input type="text" readonly="readonly" value="check">
+        </li>
+        <li>
+          <div class="icon icon-arrow-circle-right"></div>
+          <input type="text" readonly="readonly" value="arrow-circle-right">
+        </li>
+        <li>
+          <div class="icon icon-arrow-back-left"></div>
+          <input type="text" readonly="readonly" value="arrow-back-left">
+        </li>
+        <li>
+          <div class="icon icon-circle-small"></div>
+          <input type="text" readonly="readonly" value="circle-small">
+        </li>
+        <li>
+          <div class="icon icon-circle-small-1"></div>
+          <input type="text" readonly="readonly" value="circle-small-1">
+        </li>
+        <li>
+          <div class="icon icon-circle-big-outline"></div>
+          <input type="text" readonly="readonly" value="circle-big-outline">
+        </li>
+        <li>
+          <div class="icon icon-circle-big"></div>
+          <input type="text" readonly="readonly" value="circle-big">
         </li>
       </ul>
     </div><script type="text/javascript">
