--- a/src/icons/icons-reference.html
+++ b/src/icons/icons-reference.html
@@ -230,10 +230,6 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="0">
         </li>
         <li>
-          <div data-icon="i" class="icon"></div>
-          <input type="text" readonly="readonly" value="i">
-        </li>
-        <li>
           <div data-icon="d" class="icon"></div>
           <input type="text" readonly="readonly" value="d">
         </li>
@@ -248,6 +244,14 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
         <li>
           <div data-icon="h" class="icon"></div>
           <input type="text" readonly="readonly" value="h">
+        </li>
+        <li>
+          <div data-icon="j" class="icon"></div>
+          <input type="text" readonly="readonly" value="j">
+        </li>
+        <li>
+          <div data-icon="k" class="icon"></div>
+          <input type="text" readonly="readonly" value="k">
         </li>
       </ul>
       <h2>CSS mapping</h2>
@@ -365,8 +369,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="triangle">
         </li>
         <li>
-          <div class="icon icon-files-add"></div>
-          <input type="text" readonly="readonly" value="files-add">
+          <div class="icon icon-folder-add"></div>
+          <input type="text" readonly="readonly" value="folder-add">
         </li>
         <li>
           <div class="icon icon-dunno-logo"></div>
@@ -377,8 +381,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="tasks">
         </li>
         <li>
-          <div class="icon icon-doc-circle"></div>
-          <input type="text" readonly="readonly" value="doc-circle">
+          <div class="icon icon-file-circle"></div>
+          <input type="text" readonly="readonly" value="file-circle">
         </li>
         <li>
           <div class="icon icon-clock"></div>
@@ -389,8 +393,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="calendar">
         </li>
         <li>
-          <div class="icon icon-doc-check"></div>
-          <input type="text" readonly="readonly" value="doc-check">
+          <div class="icon icon-file-check"></div>
+          <input type="text" readonly="readonly" value="file-check">
         </li>
         <li>
           <div class="icon icon-cards"></div>
@@ -401,8 +405,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="chat-2">
         </li>
         <li>
-          <div class="icon icon-doc-lock"></div>
-          <input type="text" readonly="readonly" value="doc-lock">
+          <div class="icon icon-file-lock"></div>
+          <input type="text" readonly="readonly" value="file-lock">
         </li>
         <li>
           <div class="icon icon-lists"></div>
@@ -413,8 +417,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="strip">
         </li>
         <li>
-          <div class="icon icon-docs"></div>
-          <input type="text" readonly="readonly" value="docs">
+          <div class="icon icon-files"></div>
+          <input type="text" readonly="readonly" value="files">
         </li>
         <li>
           <div class="icon icon-chat"></div>
@@ -425,8 +429,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="support">
         </li>
         <li>
-          <div class="icon icon-doc"></div>
-          <input type="text" readonly="readonly" value="doc">
+          <div class="icon icon-file"></div>
+          <input type="text" readonly="readonly" value="file">
         </li>
         <li>
           <div class="icon icon-check"></div>
@@ -437,16 +441,12 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="arrow-circle-right">
         </li>
         <li>
-          <div class="icon icon-arrow-back-left"></div>
-          <input type="text" readonly="readonly" value="arrow-back-left">
-        </li>
-        <li>
           <div class="icon icon-circle-small"></div>
           <input type="text" readonly="readonly" value="circle-small">
         </li>
         <li>
-          <div class="icon icon-circle-small-1"></div>
-          <input type="text" readonly="readonly" value="circle-small-1">
+          <div class="icon icon-circle-small-outline"></div>
+          <input type="text" readonly="readonly" value="circle-small-outline">
         </li>
         <li>
           <div class="icon icon-circle-big-outline"></div>
@@ -455,6 +455,14 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
         <li>
           <div class="icon icon-circle-big"></div>
           <input type="text" readonly="readonly" value="circle-big">
+        </li>
+        <li>
+          <div class="icon icon-arrow-back"></div>
+          <input type="text" readonly="readonly" value="arrow-back">
+        </li>
+        <li>
+          <div class="icon icon-trash"></div>
+          <input type="text" readonly="readonly" value="trash">
         </li>
       </ul>
     </div><script type="text/javascript">
