--- a/src/icons/icons-reference.html
+++ b/src/icons/icons-reference.html
@@ -54,10 +54,6 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="b">
         </li>
         <li>
-          <div data-icon="c" class="icon"></div>
-          <input type="text" readonly="readonly" value="c">
-        </li>
-        <li>
           <div data-icon="e" class="icon"></div>
           <input type="text" readonly="readonly" value="e">
         </li>
@@ -253,6 +249,14 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <div data-icon="k" class="icon"></div>
           <input type="text" readonly="readonly" value="k">
         </li>
+        <li>
+          <div data-icon="c" class="icon"></div>
+          <input type="text" readonly="readonly" value="c">
+        </li>
+        <li>
+          <div data-icon="i" class="icon"></div>
+          <input type="text" readonly="readonly" value="i">
+        </li>
       </ul>
       <h2>CSS mapping</h2>
       <ul class="glyphs css-mapping">
@@ -265,16 +269,12 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="graph">
         </li>
         <li>
-          <div class="icon icon-arrow-left"></div>
-          <input type="text" readonly="readonly" value="arrow-left">
-        </li>
-        <li>
           <div class="icon icon-arrow-circle-left"></div>
           <input type="text" readonly="readonly" value="arrow-circle-left">
         </li>
         <li>
-          <div class="icon icon-notification"></div>
-          <input type="text" readonly="readonly" value="notification">
+          <div class="icon icon-buzz"></div>
+          <input type="text" readonly="readonly" value="buzz">
         </li>
         <li>
           <div class="icon icon-mail"></div>
@@ -401,8 +401,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="cards">
         </li>
         <li>
-          <div class="icon icon-chat-2"></div>
-          <input type="text" readonly="readonly" value="chat-2">
+          <div class="icon icon-talk"></div>
+          <input type="text" readonly="readonly" value="talk">
         </li>
         <li>
           <div class="icon icon-file-lock"></div>
@@ -463,6 +463,14 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
         <li>
           <div class="icon icon-trash"></div>
           <input type="text" readonly="readonly" value="trash">
+        </li>
+        <li>
+          <div class="icon icon-arrow-open"></div>
+          <input type="text" readonly="readonly" value="arrow-open">
+        </li>
+        <li>
+          <div class="icon icon-arrow-down"></div>
+          <input type="text" readonly="readonly" value="arrow-down">
         </li>
       </ul>
     </div><script type="text/javascript">
