Overlay on hover

--- a/src/icons/icons-reference.html
+++ b/src/icons/icons-reference.html
@@ -265,8 +265,8 @@ h2{font-size:18px;padding:0 0 21px 5px;margin:45px 0 0 0;text-transform:uppercas
           <input type="text" readonly="readonly" value="graph">
         </li>
         <li>
-          <div class="icon icon-arrow-left"></div>
-          <input type="text" readonly="readonly" value="arrow-left">
+          <div class="icon icon-arrow-right"></div>
+          <input type="text" readonly="readonly" value="arrow-right">
         </li>
         <li>
           <div class="icon icon-arrow-circle-left"></div>
